--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
         <div class="page-header__nav-wrap">
           <nav class="main-nav">
                <div class="main-nav wrapper">
-                  <ul class="main-nav__list site-list">
+                  <ul class="main-nav__list">
                       <li class="main-nav__item main-nav__item--active"><a href="#">Главная</a></li>
                       <li class="main-nav__items"><a href="#">Фотографии</a></li>
                       <li class="main-nav__items"><a href="#">Конкурс</a></li>
@@ -30,6 +30,7 @@
       </header>
     	 <main class="container">
     	 	<section class="contest-page">
+            <section class="wrapper">
       	 		<h1 class="contet-page__text">Конкурс на самое безбашеное путешествие с Пинк</h1>
       	 	</section>
       	 	<section class="info-user__page">
@@ -85,11 +86,6 @@
       	 			</label> -->
       	 		</div>
       	 	</section>
-          <div class="popup --visually-hidden">
-             <h2 class="popup__header">Что-то пошло не так!</h2>
-                <p class="popup__text">Проверьте поля,выделенные красным, скорее всего вы забыли их заполнить</p>
-                <button type = "button" value="1" class="popup__button-submit">Отправить форму</button>
-          </div>
       	 	<section class="user-address">
             <div class="user-contacts">
               <label for="input_number" class="user-contacts__label">
@@ -103,11 +99,6 @@
               </label>
             </div>
           </section>
-          <div class="popup --visually-hidden">
-             <h2 class="popup__header">Ваша заявка отправлена</h2>
-                <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-                <button type = "button" value="1" class="popup__button-submit">Закрыть окно</button>
-          </div>
               <section class="os-choice">
               	<p class="os-choice__text">С каким приложением путешествовали?</p>
            		 <div class="radio-buttons-group">
@@ -136,6 +127,17 @@
       			 <small class="form-section__small-notice">- обязательные поля</small>
           </section>
         </form>
+</main>
+        <div class="popup">
+            <h2 class="popup__header">Что-то пошло не так!</h2>
+            <p class="popup__text">Проверьте поля,выделенные красным, скорее всего вы забыли их заполнить</p>
+            <button type = "button" value="1" class="popup__button-submit">Отправить форму</button>
+        </div>
+        <div class="popup">
+             <h2 class="popup__header">Ваша заявка отправлена</h2>
+             <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+             <button type = "button" value="1" class="popup__button-submit">Закрыть окно</button>
+        </div>
     		<footer class="page-footer">
     	 	  <div class="container clearfix">
     		 		<section class="page-footer__img-wrap">
@@ -143,9 +145,9 @@
     		 		</section>
     		 	<div class="page-footer__social social">
       		 	  <ul class="social__list">
-        		 	   <li class="social__item"><a class="social__link--twitter" href="">Твиттер</a></li>
-        		 			<li class="social__item"><a class="social__link--facebook" href="">Фейсбук</a></li>
-        		 			<li class="social__item"><a class="social__link--youtube" href="">Ютуб</a></li>
+        		 	   <li class="social__item"><a class="social__link--twitter" href="#">Твиттер</a></li>
+        		 			<li class="social__item"><a class="social__link--facebook" href="#">Фейсбук</a></li>
+        		 			<li class="social__item"><a class="social__link--youtube" href="#">Ютуб</a></li>
       		 		</ul>
     		 	</div>
     		 		 <section class="page-footer__copyright">
@@ -153,7 +155,6 @@
     		 				<a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
     	 			</section>
     	 		</div>
-    	 	</footer>
-	</main>
+    	  </footer>
 	</body>
 	</html>
