--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
             <li class="os-list__item">></li>
           </ul>
           <h2 class="os-nav__title">Доступно для iPhone, iPad, Android,
-          <span>Windows Phone, OS X, Windows 8</span></h2>
+          Windows Phone, OS X, Windows 8</h2>
         </div>
       </section>
       <div class="features">
-        <div class="features__title">Устали от серости <span>мегаполиса?</span><br><span>Нам есть, что вам</span><span>предложить!</span></div>
+        <div class="features__title">Устали от серости мегаполиса?Нам есть, что вам предложить!</div>
         <div class="features__image-wrap">
         </div>
         <div class="features-items">
         <section class="features-items__block">
           <h2 class="features-items__title">Поднимает настроение</h2>
-          <p class="features-items__descr">Приложение позволит вам победить <span>осеннюю хандру и деперессию</span> <span> буквально в несколько кликов!</span></p>
+          <p class="features-items__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
         </section>
         <section class="features-items__block">
           <h2 class="features-items__title">Меняем мир вокруг</h2>
-          <p class="features-items__descr">Сделайте снимок и украсьте его <span>смайликом или текстовой подписью,</span> <span>чтобы усилить эффект</span></p>
+          <p class="features-items__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
         </section>
         <section class="features-items__block">
           <h2 class="features-items__title">Заводит новых друзей</h2>
-          <p class="features-items__descr">Ставьте лайки, комментируте, делитесь <span>фотографиями с друзьями и заводите</span> <span>новых</span></p>
+          <p class="features-items__descr">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых </p>
         </section>
       </div>
       </div>
@@ -70,8 +70,8 @@
       </section>
       <section class="reviews">
         <article class="slider-reviews">
-          <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому <span>взглянуть на привычные серые вещи! А еще я познакомился со своей</span> <span>будущей женой в комментариях к выложенной фотографии!&raquo;</span></div>
-          <h2 class="slider-reviews__header">Николай Петров <br><span>25 лет, водитель трамвая</span></h2>
+          <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</div>
+          <h2 class="slider-reviews__header">Николай Петров 25 лет, водитель трамвая</h2>
         </article>
         <div class="slider-reviews__pagination">
             <span class="slider-reviews__pagination-item--active"></span>
@@ -107,7 +107,7 @@
           </div>
       </section>
       <section class="info-block">
-        <h2 class="info-block__text">Остались вопросы?<br><span>Свяжитесь с нами!</span></h2>
+        <h2 class="info-block__text">Остались вопросы?Свяжитесь с нами!</h2>
         <div class="info-block__contacts">
             <div class="info-block__call-block">
               <p class="phone__text">Звоните:</p>
@@ -120,29 +120,29 @@
         </div>
       <div class="map-block">
           <p class="map-block__text">Приезжайте в гости:</p>
-          <address><a class="map-block__link" href="#">ул.Большая<br><span>Конюшенная, 19/8</span></a></address>
+          <address><a class="map-block__link" href="#">ул.Большая Конюшенная, 19/8</a></address>
           <div class="map-block_map-item">
           </div>
       </div>
       </section>
     </main>
-    <footer class="page-footer">
-      <div class="container clearfix">
-        <section class="page-footer__img-wrap">
-          <img src="img/logo.jpg" alt="Pink logo">
-        </section>
-          <div class="page-footer__social">
-            <ul class="social-links">
-              <li><a class="social-links__item-twitter" href="">Твиттер</a></li>
-              <li><a class="social-links__item-facebook" href="">Фейсбук</a></li>
-              <li><a class="social-links__item-youtube" href="">Ютуб</a></li>
-            </ul>
-        </div>
-          <section class="page-footer__copyright">
-              <p class="page-footer__copyright-text">Разработано:</p>
-              <a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
-        </section>
-      </div>
-    </footer>
+      <footer class="page-footer">
+          <div class="container clearfix">
+            <section class="page-footer__img-wrap">
+              <img src="img/logo.jpg" alt="Pink logo">
+            </section>
+          <div class="page-footer__social social">
+              <ul class="social__list">
+                 <li class="social__item"><a class="social__link--twitter" href="#">Твиттер</a></li>
+                  <li class="social__item"><a class="social__link--facebook" href="#">Фейсбук</a></li>
+                  <li class="social__item"><a class="social__link--youtube" href="#">Ютуб</a></li>
+              </ul>
+          </div>
+             <section class="page-footer__copyright">
+                <p class="page-footer__copyright-text">Разработано:</p>
+                <a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
+            </section>
+          </div>
+        </footer>
 </body>
 </html>
