--- a/photo.html
+++ b/photo.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>Pink site</title>
- <meta charset="UTF-8">
- <script src="js/script.min.js"></script>
- <link rel="stylesheet" type="text/css" href="css/style.css">
- <link rel="stylesheet" href="img/sprite.svg" type="image/svg+xml">
+   <title>Pink site</title>
+   <meta charset="UTF-8">
+   <script src="js/script.min.js"></script>
+   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" href="img/sprite.svg" type="image/svg+xml">
 </head>
 <body>
-<header class="page-header">
-  <div class="page-header__logo-wrap">
-     <a href="/" class="page-header__logo-link">
-       <img src="img/logo.svg" alt="Pink logo">
-   </a>
-  </div>
-  <div class="page-header__nav-wrap">
-    <nav class="main-nav">
-        <div class="main-nav wrapper">
-         <ul class="main-nav__list site-list">
-           <li class="main-nav__item main-nav__item--active"><a href="#">Главная</a></li>
-           <li class="main-nav__items"><a href="#">Фотографии</a></li>
-           <li class="main-nav__items"><a href="#">Конкурс</a></li>
-           <li class="main-nav__items"><a href="#">HTML ACADEMY</a></li>
-         </ul>
-         <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
-        </div>
-     </nav>
+  <header class="page-header">
+      <div class="page-header__logo-wrap">
+         <a href="/" class="page-header__logo-link">
+            <img src="img/logo.svg" alt="Pink logo">
+          </a>
+      </div>
+      <div class="page-header__nav-wrap">
+        <nav class="main-nav">
+            <div class="main-nav wrapper">
+             <ul class="main-nav__list">
+               <li class="main-nav__item main-nav__item--active"><a href="#">Главная</a></li>
+               <li class="main-nav__items"><a href="#">Фотографии</a></li>
+               <li class="main-nav__items"><a href="#">Конкурс</a></li>
+               <li class="main-nav__items"><a href="#">HTML ACADEMY</a></li>
+             </ul>
+             <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
+            </div>
+        </nav>
   </div>
 </header>
 <main class="container">
@@ -41,7 +41,7 @@
       <figure class="blog-post__image">
         <img src="img/panorama-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
         <span class="special-icon">Панорама дня</span>
-        </figure>
+      </figure>
         <div class="blog-post__body">
             <h2 class="blog-post__header">Анна</h2>
             <span>5 минут назад</span>
@@ -154,7 +154,7 @@
                    <span>2560</span>
                 </footer>
             </div>
-         </article>
+      </article>
       </div>
    </section>
    <section class="describe-block">
@@ -192,22 +192,22 @@
    </section>
 </main>
 <footer class="page-footer">
-   <div class="container clearfix">
-      <section class="page-footer__img-wrap">
-         <img src="img/logo.jpg" alt="Pink logo">
-      </section>
-      <div class="page-footer__social">
-         <ul class="social-links">
-            <li><a class="social-links__item-twitter" href="">Твиттер</a></li>
-            <li><a class="social-links__item-facebook" href="">Фейсбук</a></li>
-             <li><a class="social-links__item-youtube" href="">Ютуб</a></li>
-         </ul>
-      </div>
-      <section class="page-footer__copyright">
-         <p class="page-footer__copyright-text">Разработано:</p>
-         <a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
-      </section>
-   </div>
+    <div class="container clearfix">
+        <section class="page-footer__img-wrap">
+            <img src="img/logo.jpg" alt="Pink logo">
+        </section>
+        <div class="page-footer__social social">
+            <ul class="social__list">
+                <li class="social__item"><a class="social__link--twitter" href="#">Твиттер</a></li>
+                <li class="social__item"><a class="social__link--facebook" href="#">Фейсбук</a></li>
+                <li class="social__item"><a class="social__link--youtube" href="#">Ютуб</a></li>
+            </ul>
+        </div>
+        <section class="page-footer__copyright">
+            <p class="page-footer__copyright-text">Разработано:</p>
+            <a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
+        </section>
+    </div>
 </footer>
 </body>
 </html>
