--- a/index.html
+++ b/index.html
@@ -30,104 +30,122 @@
   </header>
     <main class="container">
         <section class="promo-section">
+          <h2 class="promo-section__header--visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
+          <section class="promo-section__wrapper">
+          </section>
         </section>
         <section class="promo-download">
-          <div class="promo-download__button">
-            <a href="#">Скачать приложение</a>
-          </div>
-          <div class="promo-download__links">
-          <ul class="os-nav os-list">
-            <li class="os-list__item"></li>
-            <li class="os-list__item"></li>
-            <li class="os-list__item">></li>
-          </ul>
-          <h2 class="os-nav__title">Доступно для iPhone, iPad, Android,
-          Windows Phone, OS X, Windows 8</h2>
-        </div>
-      </section>
+          <section class="promo-download__wrapper">
+              <div class="promo-download__button">
+                <a href="#">Скачать приложение</a>
+              </div>
+              <div class="promo-download__links">
+              <ul class="os-nav os-list">
+                <li class="os-list__item"></li>
+                <li class="os-list__item"></li>
+                <li class="os-list__item">></li>
+              </ul>
+              <h2 class="os-nav__title">Доступно для iPhone, iPad, Android,
+              Windows Phone, OS X, Windows 8</h2>
+            </div>
+          </section>
+       </section>
       <div class="features">
-        <div class="features__title">Устали от серости мегаполиса?Нам есть, что вам предложить!</div>
-        <div class="features__image-wrap">
-        </div>
-        <div class="features-items">
-        <section class="features-items__block">
-          <h2 class="features-items__title">Поднимает настроение</h2>
-          <p class="features-items__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-        </section>
-        <section class="features-items__block">
-          <h2 class="features-items__title">Меняем мир вокруг</h2>
-          <p class="features-items__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-        </section>
-        <section class="features-items__block">
-          <h2 class="features-items__title">Заводит новых друзей</h2>
-          <p class="features-items__descr">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых </p>
-        </section>
-      </div>
+          <h2 class="features_header--visually_hidden">Причины скачать приложение Pink</h2>
+          <div class="features__wrapper">
+              <div class="features__title">Устали от серости мегаполиса?Нам есть, что вам предложить!</div>
+              <div class="features__image-wrap">
+              </div>
+              <div class="features-items">
+              <section class="features-items__block">
+                <h2 class="features-items__title">Поднимает настроение</h2>
+                <p class="features-items__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+              </section>
+              <section class="features-items__block">
+                <h2 class="features-items__title">Меняем мир вокруг</h2>
+                <p class="features-items__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+              </section>
+              <section class="features-items__block">
+                <h2 class="features-items__title">Заводит новых друзей</h2>
+                <p class="features-items__descr">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых </p>
+              </section>
+            </div>
+          </div>
       </div>
       <section class="features-block">
         <div class="features-block__image-wrap">
         </div>
       </section>
       <section class="reviews">
-        <article class="slider-reviews">
-          <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</div>
-          <h2 class="slider-reviews__header">Николай Петров 25 лет, водитель трамвая</h2>
-        </article>
-        <div class="slider-reviews__pagination">
-            <span class="slider-reviews__pagination-item--active"></span>
-            <span>
-            </span>
-            <span>
-            </span>
-        </div>
+        <section class="reviews__wrapper">
+            <article class="slider-reviews">
+              <h2 class="slider-reviews__header--visually_hidden">Блок отзывов о приложении Pink</h2>
+              <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</div>
+              <h2 class="slider-reviews__header">Николай Петров 25 лет, водитель трамвая</h2>
+            </article>
+            <div class="slider-reviews__pagination">
+                <span class="slider-reviews__pagination-item--active"></span>
+                <span>
+                </span>
+                <span>
+                </span>
+            </div>
+        </section>
       </section>
       <section class="price-block">
-        <article class="price-table">
-          <table class="traffic-table">
-            <tr class="traffic-table__tr--shown">
-              <td>Стандарт<span class="traffic-table__prices">3.99 USD</span></td>
-            </tr>
-            <tr>
-              <td>Розовый фильтр</td>
-            </tr>
-            <tr>
-              <td>Смайлики</td>
-            </tr>
-            <tr>
-              <td>Комментарий</td>
-            </tr>
-          </table>
-        </article>
-         <div class="slider-reviews__pagination">
-            <span class="slider-reviews__pagination-item--active"></span>
-            <span>
-            </span>
-            <span>
-            </span>
-          </div>
+          <section class="price-block__wrapper">
+              <article class="price-table">
+                <h2 class="price-table__header--visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
+                  <table class="traffic-table">
+                    <tr class="traffic-table__tr--shown">
+                      <td>Стандарт<span class="traffic-table__prices">3.99 USD</span></td>
+                    </tr>
+                    <tr>
+                      <td>Розовый фильтр</td>
+                    </tr>
+                    <tr>
+                      <td>Смайлики</td>
+                    </tr>
+                    <tr>
+                      <td>Комментарий</td>
+                    </tr>
+                  </table>
+                </article>
+                 <div class="slider-reviews__pagination">
+                    <span class="slider-reviews__pagination-item--active"></span>
+                    <span>
+                    </span>
+                    <span>
+                    </span>
+                  </div>
+           </section>
       </section>
       <section class="info-block">
-        <h2 class="info-block__text">Остались вопросы?Свяжитесь с нами!</h2>
-        <div class="info-block__contacts">
-            <div class="info-block__call-block">
-              <p class="phone__text">Звоните:</p>
-              <a class="phone" href="tel:+7(812)555-66-66">+7(812)555-66-66</a>
-            </div>
-            <div class="info-block__mail-block">
-              <p class="mail__text">Пишите:</p>
-              <a class="mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-            </div>
-        </div>
+          <section class="info-block__wrapper">
+              <h2 class="info-block__text">Остались вопросы?Свяжитесь с нами!</h2>
+              <div class="info-block__contacts">
+                  <div class="info-block__call-block">
+                    <p class="phone__text">Звоните:</p>
+                    <a class="phone" href="tel:+7(812)555-66-66">+7(812)555-66-66</a>
+                  </div>
+                  <div class="info-block__mail-block">
+                    <p class="mail__text">Пишите:</p>
+                    <a class="mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+                  </div>
+              </div>
+          </section>
       <div class="map-block">
+          <div class="map-block__wrapper">
           <p class="map-block__text">Приезжайте в гости:</p>
           <address><a class="map-block__link" href="#">ул.Большая Конюшенная, 19/8</a></address>
           <div class="map-block_map-item">
+          </div>
           </div>
       </div>
       </section>
     </main>
       <footer class="page-footer">
-          <div class="container clearfix">
+          <div class="container">
             <section class="page-footer__img-wrap">
               <img src="img/logo.jpg" alt="Pink logo">
             </section>
