--- a/photo.html
+++ b/photo.html
@@ -16,7 +16,7 @@
       </div>
       <div class="page-header__nav-wrap">
         <nav class="main-nav">
-            <div class="main-nav wrapper">
+            <div class="main-nav__wrapper">
              <ul class="main-nav__list">
                <li class="main-nav__item main-nav__item--active"><a href="#">Главная</a></li>
                <li class="main-nav__items"><a href="#">Фотографии</a></li>
@@ -30,169 +30,197 @@
 </header>
 <main class="container">
    <section class="page-info">
-      <h1 class="page-info__text">Фотографии пользователей</h1>
+      <section class="page-info__wrapper">
+          <h1 class="page-info__text">Фотографии пользователей</h1>
+      </section>
    </section>
    <section class="user-blogs">
       <div class="user-blogs__wrapper-text">
          <h2 class="user-blogs__text">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
       </div>
-   <div class="blog-post">
-    <article class="blog-post__item">
-      <figure class="blog-post__image">
-        <img src="img/panorama-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
-        <span class="special-icon">Панорама дня</span>
-      </figure>
-        <div class="blog-post__body">
-            <h2 class="blog-post__header">Анна</h2>
-            <span>5 минут назад</span>
-            <p class="blog-post__text">Прыгать или нет?Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-            <footer class="blog-post__info">
-               <span class="heart-icon"></span>
-               <span>Нравится:</span>
-               <span>215</span>
-            </footer>
-        </div>
-     </article>
-   </div>
-   <div class="blog-post">
-      <article class="blog-post__item">
-        <figure class="blog-post__image">
-        <img src="img/photo-1-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
-        </figure>
-        <div class="blog-post__body">
-            <h2 class="blog-post__header">Левон</h2>
-            <span>5 часов назад</span>
-            <p class="blog-post__text">Вчера он на луну летал, сегодня в руки к нам попал</p>
-            <footer class="blog-post__info">
-               <span class="heart-icon"></span>
-               <span>Нравится:</span>
-               <span>356</span>
-            </footer>
-         </div>
-       </article>
-   </div>
-   <div class="blog-post">
-      <article class="blog-post__item">
-            <figure class="blog-post__image">
-            <img src="img/photo-2-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
-            </figure>
-            <div class="blog-post__body">
-                <h2 class="blog-post__header">Антон</h2>
-                <span>12 часов назад</span>
-                <p class="blog-post__text">Соседи будут рады!</p>
-                <footer class="blog-post__info">
-                   <span class="heart-icon"></span>
-                   <span>Нравится:</span>
-                   <span>356</span>
-                </footer>
-            </div>
-         </article>
-      </div>
-       <div class="blog-post">
-      <article class="blog-post__item">
-            <figure class="blog-post__image">
-            <img src="img/photo-3-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
-            </figure>
-            <div class="blog-post__body">
-                <h2 class="blog-post__header">Борис</h2>
-                <span>20 часов назад</span>
-                <p class="blog-post__text">Здесь могла бы быть ваша цитата о высоком и вечном</p>
-                <footer class="blog-post__info">
-                   <span class="heart-icon"></span>
-                   <span>Нравится:</span>
-                   <span>215</span>
-                </footer>
-            </div>
-         </article>
-      </div>
-       <div class="blog-post">
-      <article class="blog-post__item">
-            <figure class="blog-post__image">
-            <img src="img/photo-4-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
-            </figure>
-            <div class="blog-post__body">
-                <h2 class="blog-post__header">Сергей</h2>
-                <span>25 часов назад</span>
-                <p class="blog-post__text">Самая кубанская в мире!</p>
-                <footer class="blog-post__info">
-                   <span class="heart-icon"></span>
-                   <span>Нравится:</span>
-                   <span>4</span>
-                </footer>
-            </div>
-         </article>
-      </div>
-       <div class="blog-post">
-      <article class="blog-post__item">
-            <figure class="blog-post__image">
-                <img src="img/photo-5-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
-            </figure>
-            <div class="blog-post__body">
-                <h2 class="blog-post__header">Максим</h2>
-                <span>40 часов назад</span>
-                <p class="blog-post__text">Где снег-то?</p>
-                <footer class="blog-post__info">
-                   <span class="heart-icon"></span>
-                   <span>Нравится:</span>
-                   <span>150</span>
-                </footer>
-            </div>
-       </article>
-      </div>
-       <div class="blog-post">
-      <article class="blog-post__item">
-            <figure class="blog-post__image">
-            <img src="img/photo-6-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
-            </figure>
-            <div class="blog-post__body">
-                <h2 class="blog-post__header">Надежда</h2>
-                <span>45 часов назад</span>
-                <p class="blog-post__text">Всем GM и взаимные лайки!</p>
-                <footer class="blog-post__info">
-                   <span class="heart-icon"></span>
-                   <span>Нравится:</span>
-                   <span>2560</span>
-                </footer>
-            </div>
-      </article>
-      </div>
    </section>
+   <div class="blog-post">
+     <div class="blog-post__wrapper">
+       <article class="blog-post__item">
+            <h2 class="blog-post__header--visually_hidden">Фотографии пользователей социальной сети</h2>
+            <figure class="blog-post__image">
+              <img src="img/panorama-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
+              <span class="special-icon">Панорама дня</span>
+            </figure>
+              <div class="blog-post__body">
+                  <h2 class="blog-post__header">Анна</h2>
+                  <span>5 минут назад</span>
+                  <p class="blog-post__text">Прыгать или нет?Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+                  <footer class="blog-post__info">
+                     <span class="heart-icon"></span>
+                     <span class="like-text">Нравится:</span>
+                     <span class="like-counts">215</span>
+                  </footer>
+              </div>
+       </article>
+      </div>
+   </div>
+   <div class="blog-post">
+      <div class="blog-post__wrapper">
+          <article class="blog-post__item">
+            <h2 class="blog-post__header--visually_hidden">Фотографии пользователей социальной сети</h2>
+            <figure class="blog-post__image">
+            <img src="img/photo-1-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
+            </figure>
+            <div class="blog-post__body">
+                <h2 class="blog-post__header">Левон</h2>
+                <span>5 часов назад</span>
+                <p class="blog-post__text">Вчера он на луну летал, сегодня в руки к нам попал</p>
+                <footer class="blog-post__info">
+                   <span class="heart-icon"></span>
+                   <span class="like-text">Нравится:</span>
+                   <span class="like-counts">356</span>
+                </footer>
+             </div>
+           </article>
+      </div>
+   </div>
+   <div class="blog-post">
+     <div class="blog-post__wrapper">
+          <article class="blog-post__item">
+                <h2 class="blog-post__header--visually_hidden">Фотографии пользователей социальной сети</h2>
+                <figure class="blog-post__image">
+                <img src="img/photo-2-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
+                </figure>
+                <div class="blog-post__body">
+                    <h2 class="blog-post__header">Антон</h2>
+                    <span>12 часов назад</span>
+                    <p class="blog-post__text">Соседи будут рады!</p>
+                    <footer class="blog-post__info">
+                       <span class="heart-icon"></span>
+                       <span class="like-text">Нравится:</span>
+                       <span  class="like-counts">356</span>
+                    </footer>
+                </div>
+            </article>
+      </div>
+    </div>
+       <div class="blog-post">
+          <div class="blog-post__wrapper">
+              <article class="blog-post__item">
+                    <h2 class="blog-post__header--visually_hidden">Фотографии пользователей социальной сети</h2>
+                    <figure class="blog-post__image">
+                    <img src="img/photo-3-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
+                    </figure>
+                    <div class="blog-post__body">
+                        <h2 class="blog-post__header">Борис</h2>
+                        <span>20 часов назад</span>
+                        <p class="blog-post__text">Здесь могла бы быть ваша цитата о высоком и вечном</p>
+                        <footer class="blog-post__info">
+                           <span class="heart-icon"></span>
+                           <span class="like-text">Нравится:</span>
+                           <span class="like-counts">215</span>
+                        </footer>
+                    </div>
+               </article>
+          </div>
+      </div>
+       <div class="blog-post">
+         <div class="blog-post__wrapper">
+              <article class="blog-post__item">
+                  <h2 class="blog-post__header--visually_hidden">Фотографии пользователей социальной сети</h2>
+                  <figure class="blog-post__image">
+                  <img src="img/photo-4-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
+                  </figure>
+                  <div class="blog-post__body">
+                      <h2 class="blog-post__header">Сергей</h2>
+                      <span>25 часов назад</span>
+                      <p class="blog-post__text">Самая кубанская в мире!</p>
+                      <footer class="blog-post__info">
+                         <span class="heart-icon"></span>
+                         <span class="like-text">Нравится:</span>
+                         <span class="like-counts">4</span>
+                      </footer>
+                  </div>
+              </article>
+          </div>
+        </div>
+       <div class="blog-post">
+          <div class="blog-post__wrapper">
+              <article class="blog-post__item">
+                  <h2 class="blog-post__header--visually_hidden">Фотографии пользователей социальной сети</h2>
+                  <figure class="blog-post__image">
+                      <img src="img/photo-5-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
+                  </figure>
+                  <div class="blog-post__body">
+                      <h2 class="blog-post__header">Максим</h2>
+                      <span>40 часов назад</span>
+                      <p class="blog-post__text">Где снег-то?</p>
+                      <footer class="blog-post__info">
+                         <span class="heart-icon"></span>
+                         <span class="like-text">Нравится:</span>
+                         <span class="like-counts">150</span>
+                      </footer>
+                  </div>
+              </article>
+         </div>
+      </div>
+       <div class="blog-post">
+             <div class="blog-post__wrapper">
+                <article class="blog-post__item">
+                    <h2 class="blog-post__header--visually_hidden">Фотографии пользователей социальной сети</h2>
+                    <div class="blog-post__wrapper">
+                    <figure class="blog-post__image">
+                    <img src="img/photo-6-mobile.jpg" width="300" height="137" alt="Фотография пользователя из социальной сети">
+                    </figure>
+                    <div class="blog-post__body">
+                        <h2 class="blog-post__header">Надежда</h2>
+                        <span>45 часов назад</span>
+                        <p class="blog-post__text">Всем GM и взаимные лайки!</p>
+                        <footer class="blog-post__info">
+                           <span class="heart-icon"></span>
+                           <span class="like-text">Нравится:</span>
+                           <span class="like-counts">2560</span>
+                        </footer>
+                    </div>
+                    </div>
+                </article>
+            </div>
+        </div>
    <section class="describe-block">
     <div class="describe-block__wrapper">
          <h2 class="describe-block__text">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</h2>
     </div>
    </section>
    <section class="editor-block">
-         <div class="editor-block__content">
-            <article class="image-editor">
-               <div class="image-editor__image-block">
-                  <img src="img/photo-7-mobile.jpg" alt="Фотография для редактирования">
-               </div>
-               <div class="image-editor__tools">
-                  <div class="items-blocks">
-                     <span class="items-blocks__icon"></span>
-                     <span></span>
-                     <span></span>
-                  </div>
-                <div class="filterline-average">
-               <div class="filter-average-from">
-               <label for="average-from">test</label>
-              <input type="text" name="average-filter" id="average-from" value="0">
+        <div class="editor-block__wrapper">
+             <div class="editor-block__content">
+                <article class="image-editor">
+                 <h2 class="image-editor__header--visually_hidden">Пример редактора фотографий приложения Pink</h2>
+                   <div class="image-editor__image-block">
+                      <img src="img/photo-7-mobile.jpg" alt="Фотография для редактирования">
+                   </div>
+                   <div class="image-editor__tools">
+                      <div class="items-blocks">
+                         <span class="items-blocks__icon"></span>
+                         <span></span>
+                         <span></span>
+                      </div>
+                    <div class="filterline-average">
+                   <div class="filter-average-from">
+                   <label for="average-from">test</label>
+                  <input type="text" name="average-filter" id="average-from" value="0">
+                    </div>
+                   <div class="filter-average-to">
+                <label for="average-before">test</label>
+                  <input type="text" name="average-filter" id="average-before" value="">
                 </div>
-               <div class="filter-average-to">
-            <label for="average-before">test</label>
-              <input type="text" name="average-filter" id="average-before" value="">
-            </div>
-            </div>
-            </div>
-            </article>
-            <a href="#" class="editor-block__button">Запостить</a>
-            <a href="#" class="editor-block__button --disable">Отмена</a>
-         </div>
+                </div>
+                </div>
+                </article>
+                <a href="#" class="editor-block__button">Запостить</a>
+                <a href="#" class="editor-block__button --disable">Отмена</a>
+             </div>
+        </div>
    </section>
 </main>
 <footer class="page-footer">
-    <div class="container clearfix">
+    <div class="container">
         <section class="page-footer__img-wrap">
             <img src="img/logo.jpg" alt="Pink logo">
         </section>
