--- a/form.html
+++ b/form.html
@@ -36,15 +36,14 @@
       	 	  </section>
         </section>
       	 	<section class="info-user">
-            <h2 class="info-user__header--visually-hidden">Условия конкурса приложения Pink</h2>
-            <section class="info-user__wrapper">
-      	 		<p class="info-user__text">Поделитесь своей историей и получите шанс выиграть ценный приз&nbsp;1000 миль на вашу бонусную карту!</p>
+                <h2 class="info-user__header--visually-hidden">Условия конкурса приложения Pink</h2>
+      	 		    <p class="info-user__text">Поделитесь своей историей и получите шанс выиграть ценный приз&nbsp;1000 миль на вашу бонусную карту!</p>
             </section>
-          </section>
       	 	 <form class="user-form" method="get" action="https://echo.htmlacademy.ru/adaptive">
              <section class="input-form">
                 <h2 class="input-form__header--visually-hidden">Формы для ввода данных приложения Pink</h2>
                 <section class="input-form__wrapper">
+                  <h2 class="input-form__header--visually-hidden">Формы для ввода данных приложения Pink</h2>
         	 			<br>
         	 			<label for="input" class="input-form__input-label">
         	 				  Фамилия
@@ -62,8 +61,8 @@
               </section>
             </section>
       	   	<section class="achievments-page">
-                <section class="achievments-page__wrapper">
-                    <h2 class="achievments-page__header--visually_hidden">Формы для ввода данных приложения Pink</h2>
+                 <h2 class="achievments-page__header--visually_hidden">Формы для ввода данных приложения Pink</h2>
+                <div class="achievments-page__wrapper">
               	 		<p class="achievments-page__text">Ваши безбашенные достижения в путешествии</p>
               	 		<div class="catalog-checkbox">
               	 			<label for="checkbox" class="catalog-checkbox__label catalog-checkbox__label--active">
@@ -95,11 +94,11 @@
       		 			  Разгромил отель
       	 			</label> -->
       	 		      </div>
-               </section>
+               </div>
       	 	 </section>
       	 	<section class="user-address">
             <h2 class="user_address__header--visually_hidden">Контактные данные приложения Pink</h2>
-            <section class="user-address__wrapper">
+            <div class="user-address__wrapper">
                 <div class="user-contacts">
                   <label for="input_number" class="user-contacts__label">
           			       Номер телефона
@@ -111,11 +110,11 @@
                       <input type="text" value="Введите почту" class="user-contacts__input" id="input_address">
                   </label>
                 </div>
-            </section>
+            </div>
           </section>
               <section class="os-choice">
                 <h2 class="os-choice__header--visually_hidden">Формы для ввода данных приложения Pink</h2>
-                <section class="os-choice__wrapper">
+                <div class="os-choice__wrapper">
                   	<p class="os-choice__text">С каким приложением путешествовали?</p>
                		 <div class="radio-buttons-group">
                		   	<label for="radio-select" class="radio-buttons-group__label">
@@ -133,19 +132,19 @@
                			      <input type="radio" id="radio-select_windows" class="radio-button-group__input">
                			  </label>
                		 </div>
-      		      </section>
+      		      </div>
               </section>
       		<section class="form-describe">
-            <section class="form-describe__wrapper">
-                 <h2 class="form-describe__header--visually_hidden">Формы для ввода данных приложения Pink</h2>
+            <h2 class="form-describe__header--visually_hidden">Формы для ввода данных приложения Pink</h2>
+             <div class="form-describe__wrapper">
           			 <h2 class="form-describe__text">Опишите свои эмоции</h2>
           			 <textarea name="feedback" cols="30" rows="10" class="form-section__text-area">Можно прям в красках, не стесняясь в выражениях</textarea>
           			 <br>
           			 <button type="submit" value="1" class="form-section__button-submit">Отправить форму</button>
           			<br>
           			 <small class="form-section__small-notice">- обязательные поля</small>
+            </div>
             </section>
-          </section>
         </form>
 </main>
 <footer class="page-footer">
@@ -162,6 +161,7 @@
       		 		</ul>
     		 	</div>
     		 		 <section class="page-footer__copyright">
+                <h2 class="page-footer__header--visually_hidden">Копирайт</h2>
     		 				<p class="page-footer__copyright-text">Разработано:</p>
     		 				<a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
     	 			</section>
