--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
     <main class="container">
         <section class="promo-section">
           <h2 class="promo-section__header--visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
-          <section class="promo-section__wrapper">
-          </section>
         </section>
         <section class="promo-download">
-          <section class="promo-download__wrapper">
+          <h2 class="promo-download__header--visually_hidden">Выбор операционной системы для скачивания приложения PInk</h2>
+          <div class="promo-download__wrapper">
               <div class="promo-download__button">
                 <a href="#">Скачать приложение</a>
               </div>
@@ -48,7 +47,7 @@
               <h2 class="os-nav__title">Доступно для iPhone, iPad, Android,
               Windows Phone, OS X, Windows 8</h2>
             </div>
-          </section>
+          </div>
        </section>
       <div class="features">
           <h2 class="features_header--visually_hidden">Причины скачать приложение Pink</h2>
@@ -73,11 +72,13 @@
           </div>
       </div>
       <section class="features-block">
+        <h2 class="features-block__header--vidually_hidden">Блок с отзывами</h2>
         <div class="features-block__image-wrap">
         </div>
       </section>
       <section class="reviews">
-        <section class="reviews__wrapper">
+        <h2 class="slider-reviews__header--visually_hidden">Блок отзывов о приложении Pink</h2>
+        <div class="reviews__wrapper">
             <article class="slider-reviews">
               <h2 class="slider-reviews__header--visually_hidden">Блок отзывов о приложении Pink</h2>
               <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</div>
@@ -90,10 +91,10 @@
                 <span>
                 </span>
             </div>
-        </section>
+        </div>
       </section>
       <section class="price-block">
-          <section class="price-block__wrapper">
+          <h2 class="price-block__header--visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
               <article class="price-table">
                 <h2 class="price-table__header--visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
                   <table class="traffic-table">
@@ -118,10 +119,10 @@
                     <span>
                     </span>
                   </div>
-           </section>
       </section>
       <section class="info-block">
-          <section class="info-block__wrapper">
+          <h2 class="info-block__header--visually_hidden">Контактные данные</h2>
+          <div class="info-block__wrapper">
               <h2 class="info-block__text">Остались вопросы?Свяжитесь с нами!</h2>
               <div class="info-block__contacts">
                   <div class="info-block__call-block">
@@ -133,7 +134,7 @@
                     <a class="mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
                   </div>
               </div>
-          </section>
+          </div>
       <div class="map-block">
           <div class="map-block__wrapper">
           <p class="map-block__text">Приезжайте в гости:</p>
@@ -147,6 +148,7 @@
       <footer class="page-footer">
           <div class="container">
             <section class="page-footer__img-wrap">
+              <h2 class="page-footer__header--visually_hidden">Логотип пинк</h2>
               <img src="img/logo.jpg" alt="Pink logo">
             </section>
           <div class="page-footer__social social">
@@ -157,6 +159,7 @@
               </ul>
           </div>
              <section class="page-footer__copyright">
+                <h2 class="page-footer__header--visually_hidden">Копирайт</h2>
                 <p class="page-footer__copyright-text">Разработано:</p>
                 <a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
             </section>
