--- a/photo.html
+++ b/photo.html
@@ -30,9 +30,10 @@
 </header>
 <main class="container">
    <section class="page-info">
-      <section class="page-info__wrapper">
+      <h2 class="page-info__header--visually_hidden">Информация о фотографиях пользователей</h2>
+      <div class="page-info__wrapper">
           <h1 class="page-info__text">Фотографии пользователей</h1>
-      </section>
+      </div>
    </section>
    <section class="user-blogs">
       <div class="user-blogs__wrapper-text">
@@ -183,12 +184,13 @@
             </div>
         </div>
    <section class="describe-block">
+    <h2 class="describe-block__header--visually_hidden">Промо-текст</h2>
     <div class="describe-block__wrapper">
          <h2 class="describe-block__text">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</h2>
     </div>
    </section>
    <section class="editor-block">
-        <div class="editor-block__wrapper">
+        <h2 class="editor-block__header--visually_hidden">Редактор фото</h2>
              <div class="editor-block__content">
                 <article class="image-editor">
                  <h2 class="image-editor__header--visually_hidden">Пример редактора фотографий приложения Pink</h2>
@@ -216,12 +218,12 @@
                 <a href="#" class="editor-block__button">Запостить</a>
                 <a href="#" class="editor-block__button --disable">Отмена</a>
              </div>
-        </div>
    </section>
 </main>
 <footer class="page-footer">
     <div class="container">
         <section class="page-footer__img-wrap">
+            <h2 class="page-footer__header--visually_hidden">Логотип пинк</h2>
             <img src="img/logo.jpg" alt="Pink logo">
         </section>
         <div class="page-footer__social social">
@@ -232,6 +234,7 @@
             </ul>
         </div>
         <section class="page-footer__copyright">
+            <h2 class="page-footer__header--visually_hidden">Копирайт</h2>
             <p class="page-footer__copyright-text">Разработано:</p>
             <a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
         </section>
