--- a/index.html
+++ b/index.html
@@ -5,40 +5,39 @@
 <meta charset="UTF-8">
 <script src="js/script.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" href="img/sprite.svg" type="image/svg+xml">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 </head>
 <body>
     <header class="page-header page-header--active">
-        <div class="page-header__logo-wrap">
-          <a href="/" class="page-header__logo-link">
-            <img src="img/logo.svg" alt="Pink logo">
-          </a>
-        </div>
         <div class="page-header__nav-wrap">
-            <nav class="main-nav">
-                <div class="main-nav wrapper">
-                    <ul class="main-nav__list site-list">
-                        <li class="main-nav__items main-nav__items--active"><a href="#">Главная</a></li>
-                        <li class="main-nav__items"><a href="#">Фотографии</a></li>
-                        <li class="main-nav__items"><a href="#">Конкурс</a></li>
-                        <li class="main-nav__items"><a href="#">HTML ACADEMY</a></li>
-                    </ul>
-                    <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
-                </div>
-            </nav>
+            <div class="menu-header">
+               <div class="page-header__logo-wrap">
+                  <a href="/" class="page-header__logo-link">
+                    <img src="img/logo.svg" alt="Pink logo">
+                  </a>
+               </div>
+              <nav class="main-nav">
+                  <div class="main-nav wrapper">
+                      <ul class="main-nav__list site-list">
+                          <li class="main-nav__items main-nav__items--active"><a href="#">Главная</a></li>
+                          <li class="main-nav__items"><a href="#">Фотографии</a></li>
+                          <li class="main-nav__items"><a href="#">Конкурс</a></li>
+                          <li class="main-nav__items"><a href="#">HTML ACADEMY</a></li>
+                      </ul>
+                      <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
+                  </div>
+              </nav>
         </div>
+        </div>
+        <section class="promo-section">
+          <div class="promo-section wrapper">
+            <h2 class="promo-section__header visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
+          </div>
+        </section>
     </header>
     <main class="container">
-        <section class="promo-section">
-            <div class="promo-section wrapper">
-              <h2 class="promo-section__header--visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
-            </div>
-        </section>
         <section class="promo-download">
-            <h2 class="promo-download__header--visually_hidden">Выбор операционной системы для скачивания приложения PInk</h2>
-            <div class="promo-download__wrapper">
+            <h2 class="promo-download__header visually_hidden">Выбор операционной системы для скачивания приложения PInk</h2>
+            <div class="promo-download wrapper">
                 <div class="promo-download__button">
                     <a href="#">Скачать приложение</a>
                 </div>
@@ -46,7 +45,7 @@
                     <ul class="os-nav os-list">
                         <li class="os-list__item"></li>
                         <li class="os-list__item"></li>
-                        <li class="os-list__item">></li>
+                        <li class="os-list__item"></li>
                     </ul>
                     <h2 class="os-nav__title">Доступно для iPhone, iPad, Android,
               Windows Phone, OS X, Windows 8</h2>
@@ -54,14 +53,14 @@
             </div>
         </section>
         <div class="features">
-            <h2 class="features_header--visually_hidden">Причины скачать приложение Pink</h2>
-            <div class="features__wrapper">
+            <h2 class="features_header visually_hidden">Причины скачать приложение Pink</h2>
+            <div class="features wrapper">
                 <div class="features__title">Устали от серости мегаполиса?</div>
                 <div class="features__title">Нам есть, что вам предложить!</div>
                 <div class="features__image-wrap">
                 </div>
                 <div class="features-items">
-                  <div class="features-items__wrapper">
+                  <div class="features-items wrapper">
                     <section class="features-items__block">
                         <h2 class="features-items__title">Поднимает настроение</h2>
                         <p class="features-items__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
@@ -77,7 +76,7 @@
                 </div>
                 </div>
               <section class="features-block">
-               <h2 class="features-block__header--visually_hidden">Блок с отзывами</h2>
+               <h2 class="features-block__header visually_hidden">Блок с отзывами</h2>
                 <div class="features-block__image-wrap">
 
                 </div>
@@ -85,10 +84,10 @@
                 </div>
         </section>
         <section class="reviews">
-            <h2 class="slider-reviews__header--visually_hidden">Блок отзывов о приложении Pink</h2>
-            <div class="reviews__wrapper">
+            <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
+            <div class="reviews wrapper">
                 <article class="slider-reviews">
-                    <h2 class="slider-reviews__header--visually_hidden">Блок отзывов о приложении Pink</h2>
+                    <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
                     <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</div>
                     <h2 class="slider-reviews__header">Николай Петров <span>25 лет, водитель трамвая</span></h2>
                 </article>
@@ -102,9 +101,9 @@
             </div>
         </section>
         <section class="price-block">
-            <h2 class="price-block__header--visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
+            <h2 class="price-block__header visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
             <article class="price-table">
-                <h2 class="price-table__header--visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
+                <h2 class="price-table__header visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
                 <table class="traffic-table">
                     <tr class="traffic-table__tr--shown">
                         <td>Стандарт<span class="traffic-table__prices">3.99 USD</span></td>
@@ -127,7 +126,7 @@
             </div>
         </section>
         <section class="info-block">
-            <h2 class="info-block__header--visually_hidden">Контактные данные</h2>
+            <h2 class="info-block__header visually_hidden">Контактные данные</h2>
             <div class="info-block__wrapper">
                 <h2 class="info-block__text">Остались вопросы?Свяжитесь с нами!</h2>
                 <div class="info-block__contacts">
@@ -142,7 +141,7 @@
                 </div>
             </div>
             <div class="map-block">
-                <div class="map-block__wrapper">
+                <div class="map-block wrapper">
                     <p class="map-block__text">Приезжайте в гости:</p>
                     <address><a class="map-block__link" href="#">ул.Большая Конюшенная, 19/8</a></address>
                     <div class="map-block_map-item">
@@ -154,7 +153,7 @@
     <footer class="page-footer">
         <div class="container">
             <section class="page-footer__img-wrap">
-                <h2 class="page-footer__header--visually_hidden">Логотип пинк</h2>
+                <h2 class="page-footer__header visually_hidden">Логотип пинк</h2>
                 <img src="img/logo.jpg" alt="Pink logo">
             </section>
             <div class="page-footer__social social">
