--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
         </section>
         <div class="features">
             <h2 class="features_header visually_hidden">Причины скачать приложение Pink</h2>
-            <div class="features wrapper">
-                <div class="features__title">Устали от серости мегаполиса?</div>
-                <div class="features__title">Нам есть, что вам предложить!</div>
-                <div class="features__image-wrap">
-                </div>
+            <div class="features-headers">
+                <h2 class="features__title">Устали от серости мегаполиса?</h2>
+                <h2 class="features__title">Нам есть, что вам предложить!</h2>
+            </div>
                 <div class="features-items">
                   <div class="features-items wrapper">
                     <section class="features-items__block">
@@ -73,16 +72,11 @@
                         <h2 class="features-items__title">Заводит новых друзей</h2>
                         <p class="features-items__descr">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых </p>
                     </section>
+                    <div class="features-items__image-wrap">
+                    </div>
                 </div>
                 </div>
-              <section class="features-block">
-               <h2 class="features-block__header visually_hidden">Блок с отзывами</h2>
-                <div class="features-block__image-wrap">
-
-                </div>
-                </div>
-                </div>
-        </section>
+          </div>
         <section class="reviews">
             <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
             <div class="reviews wrapper">
@@ -94,9 +88,9 @@
                 <div class="slider-reviews__pagination">
                     <span class="slider-reviews__pagination-item--active"></span>
                     <span>
-                </span>
+                    </span>
                     <span>
-                </span>
+                    </span>
                 </div>
             </div>
         </section>
